Function checkscore in progress

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
 <button id="retry" onclick="newGame()">Recommencer ?</button>
 
+<h2 id="winner"></h2>
+
 <script src="script.js"></script>
 </body>
 </html>
