Add some comments

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <table>
     <tr>
-        <td id="box1" onclick="check('box1');switchPlayer();this.onclick=null;"></td>
+        <td id="box1" onclick="check('box1');switchPlayer();this.onclick=null;"></td> <!-- this.onclick=null permet de cliquer qu'une seule fois dans la box -->
         <td id="box2" onclick="check('box2');switchPlayer();this.onclick=null;"></td>
         <td id="box3" onclick="check('box3');switchPlayer();this.onclick=null;"></td>
     </tr>
